--- a/awal_doah_willy/awal_doaa.ipynb
+++ b/awal_doah_willy/awal_doaa.ipynb
@@ -358,18 +358,16 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 58,
+            "execution_count": 59,
             "metadata": {},
             "outputs": [
                 {
-                    "ename": "TypeError",
-                    "evalue": "cannot unpack non-iterable int object",
-                    "output_type": "error",
-                    "traceback": [
-                        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-                        "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-                        "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_8544/857937640.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;31m# pure neighbours of edge elements\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mu\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0medge\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m             \u001b[0mcovered_vertices\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mu\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0mcovered_vertices\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-                        "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "(0, 1)\n",
+                        "{2, 3, 4, 5, 6}\n",
+                        "False\n"
                     ]
                 }
             ],
@@ -388,6 +386,11 @@
                 "        # pure neighbours of edge elements\n",
                 "        for u in edge:\n",
                 "            covered_vertices.remove(u)\n",
+                "\n",
+                "        # an edge must not exist between neighbors of domset\n",
+                "        isDomset = set()\n",
+                "        for u in covered_vertices:\n",
+                "            if \n",
                 "\n",
                 "        print(edge)\n",
                 "        print(covered_vertices)\n",
